--- a/Projeto Bio Instagram/index.html
+++ b/Projeto Bio Instagram/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projeto</title>
+    <title>Plínio Melo</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -24,19 +24,23 @@
 
       <ul>
         <li>
-          <a href="#">Consultoria Empresarial</a>
+          <a href="/html/pag1.html">Consultoria Empresarial</a>
         </li>
 
         <li>
-          <a href="#">Consultoria de vendas</a>
+          <a href="/html/pag1.html">Consultoria de vendas</a>
         </li>
 
         <li>
-          <a href="#">Masterclass</a>
+          <a href="/html/pag1.html">Masterclass</a>
         </li>
 
         <li>
-          <a href="#" target="_blank">Contato</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=5534997175427&text=Ol%C3%A1%20Pl%C3%ADnio,%20peguei%20o%20seu%20contato%20na%20BIO%20do%20seu%20Instagram!"
+            target="_blank"
+            >Contato</a
+          >
         </li>
       </ul>
 
